--- a/first_unique_char/Cargo.toml
+++ b/first_unique_char/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "expand_string"
+name = "first_unique_char"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-queues = "1.0.2"
